

Name: Segue ChangeLog


v. 1.8.2 (2007-07-11)
----------------------------------------------------
		
	* Change: 
		
		Enclosed content block text in div tags instead of table
		(Alex Chapin)
		
	* Bug Fix: 
		Fixed HTML editor option dropdown for IE so that the option to choose no
		editor is selectable.
		(Alex Chapin)
		
	* Change: 
		Changed new FCKeditor so that RETURN/ENTER key creates a br tag instead of a
		p tag
		(Alex Chapin)
		
	* Bug Fix: 
		Fixed new file-for-download content block layout so that all elements are
		contained within downloadbar style.
		(Alex Chapin)
	
v. 1.8.1 (2007-07-10)
----------------------------------------------------
		
	* Change: 
		Changed the version difference styles so that the add and delete differences
		always show black text
		(Alex Chapin)
		
	* Change: 
		
		Add wiki-linking support to file-for-download and image type content blocks
		(Alex Chapin)
		
	* Change: 
		Removed the Universal keyboard from FCKeditor since this is no longer
		supported by current versions of this editor
		(Alex Chapin)
		
	* Change: 
		
		Updated FCKeditor from version 2.3.2 to version 2.4.3.
		(Alex Chapin)
		
	* Change: 
		Added additional options in content block number of items to display to
		include 2, 3, 4 items per page.
		(Alex Chapin)
		
	* Change: 
		Included files attached to discussion posts as enclosures in the discussion
		posts RSS feed.
		(Alex Chapin)
		
	* Bug Fix: 
		
		Detail pages with discussion posts now valid HTML.
		(Alex Chapin)
		
	* Bug Fix: 
		Discussion display options for threading or flat now being properly set for
		session. 
		(Alex Chapin)
		
	* Bug Fix: 
		
		Empty site (i.e. no sections or pages) now renders properly.
		(Alex Chapin)
		
	* New feature: 
		Added a Flash audio player for mp3 files in file-for-download content block
		and discussion posts
		(Alex Chapin)
		
	* Change: 
		Changed layout of file-for-download content block and the layout for files
		attached to discussion posts