@@ -25,6 +25,10 @@
 <h2>Version 1.8.2</h2>
 <h3>2007-07-11</h3>
 <ul>
+		<li> Bug Fix:  
+			Flash audio player is now displayed only for mp3 files that do not
+			have special characters.
+		 (<em>Alex Chapin</em>)</li>
 		<li> Change:  
 			Enclosed content block text in div tags instead of table
 		 (<em>Alex Chapin</em>)</li>
