@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <changelog name="Segue ChangeLog">
 	<version number="1.8.2" date="2007-07-11">
+		<fix author='alex'>
+			Flash audio player is now displayed only for mp3 files that do not
+			have special characters.
+		</fix>
 		<change author='alex'>
 			Enclosed content block text in div tags instead of table
 		</change>
